unpackaged/main/default/objects/ETSALES_Location__c/ETSALES_Location__c.object-meta.xml
<CustomObject>
    <label>GL Location</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>GL Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>