unpackaged/main/default/objects/ETSALES_Location__c/fields/ETSALES_Emirates__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Emirates__c</fullName>
    <label>Emirates</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Abudhabi</fullName>
            </value>
            <value>
                <fullName>Sharjah</fullName>
            </value>
            <value>
                <fullName>Ras Al Khaimah</fullName>
            </value>
            <value>
                <fullName>Ajman</fullName>
            </value>
            <value>
                <fullName>Umm Al Quwain</fullName>
            </value>
            <value>
                <fullName>Fujairah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>