unpackaged/main/default/objects/ETSALES_Location__c/fields/ETSALES_Region__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>