unpackaged/main/default/objects/ETSALES_Location__c/fields/ETSALES_Zone__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>Zone A</fullName>
            </value>
            <value>
                <fullName>Zone B</fullName>
            </value>
            <value>
                <fullName>Zone C</fullName>
            </value>
            <value>
                <fullName>Head Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>