unpackaged/main/default/objects/ETSALES_Location__c/fields/GL_Zone_Lookup__c.field-meta.xml
<CustomField>
    <fullName>GL_Zone_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Zone Lookup</label>
    <referenceTo>GL_Zone__c</referenceTo>
    <relationshipLabel>GL Locations</relationshipLabel>
    <relationshipName>GL_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>