unpackaged/main/default/objects/ETSALES_Location__c/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>