unpackaged/main/default/objects/ETSALES_Location__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Location_Code__c</columns>
    <columns>GL_Region__c</columns>
    <columns>GL_Zone__c</columns>
    <columns>GL_Zone_Lookup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>